fix features background in dark mode

--- a/website/src/components/HomepageFeatures/styles.module.css
+++ b/website/src/components/HomepageFeatures/styles.module.css
@@ -30,3 +30,7 @@
   max-width: 40rem;
   width: 100%;
 }
+
+[data-theme="dark"] .feature {
+  background-color: var(--ifm-color-gray-800);
+}
